--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -11,6 +11,7 @@ imports:
     - { resource: security.yml }
     - { resource: services.yml }
     - { resource: resource.yml }
+    - { resource: grid.yml }
 
 parameters:
     locale: en_US
