--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -33,3 +33,13 @@ app_admin_api_supplier:
         alias: app.supplier
         section: admin_api
     type: sylius.resource_api
+
+app_admin_supplier:
+    prefix: /admin
+    resource: |
+        alias: app.supplier
+        templates: SyliusAdminBundle:Crud
+        section: admin
+        except: ['show']
+        grid: app_admin_supplier
+    type: sylius.resource
