--- a/src/AppBundle/Resources/config/doctrine/Supplier.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/Supplier.orm.yml
@@ -16,3 +16,7 @@ AppBundle\Entity\Supplier:
       type: string
       length: 140
       nullable: false
+    description:
+      type: string
+      length: 250
+      nullable: true
