Add sorting to grid

--- a/app/config/grid.yml
+++ b/app/config/grid.yml
@@ -9,6 +9,7 @@ sylius_grid:
                 code:
                     type: string
                     label: sylius.ui.code
+                    sortable: true
                 name:
                     type: twig
                     label: sylius.ui.name
