Custom order item state machine

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -12,6 +12,7 @@ imports:
     - { resource: services.yml }
     - { resource: resource.yml }
     - { resource: grid.yml }
+    - { resource: state_machine.yml }
 
 parameters:
     locale: en_US
