Sending coupon in email

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -13,6 +13,7 @@ imports:
     - { resource: resource.yml }
     - { resource: grid.yml }
     - { resource: state_machine.yml }
+    - { resource: sylius_mailer.yml }
 
 parameters:
     locale: en_US
