Add all code from the training (might not work though)

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -10,6 +10,8 @@ imports:
     - { resource: parameters.yml }
     - { resource: security.yml }
     - { resource: services.yml }
+    - { resource: resource.yml }
+    - { resource: grid.yml }
 
 parameters:
     locale: en_US
